# alsmuse

./: .gitignore  BRAINSTORM.md  CLAUDE.md  DESIGN-lyrics-alignment.md  DESIGN-phrase-aligned-events.md  DESIGN-v2.md  DESIGN.md  IDEAS.md  MVP-lyrics-alignment.md  MVP-v2.md  MVP.md  README.md  pyproject.toml
.claude/agents/: python-implementer.md
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md  MVP.md  design-lyrics-enhancements.md
src/alsmuse/: __init__.py  analyze.py  audio.py  bournemouth_align.py  category_review.py  cli.py  config.py  drum_mapping.py  events.py  exceptions.py  extractors.py  fills.py  formatter.py  lyrics.py  lyrics_align.py  midi.py  models.py  parser.py  phrases.py  start_bar_ui.py  visualize.py  visualizer.py
tests/: __init__.py  test_audio.py  test_category_review.py  test_config.py  test_events.py  test_fills.py  test_integration.py  test_lyrics.py  test_lyrics_align.py  test_midi.py  test_parser.py  test_phrases.py  test_start_bar.py  test_start_bar_ui.py  test_visualizer.py
