[project]
name = "alsmuse"
version = "0.1.0"
description = "Analyze Ableton Live sets to understand musical structure for music video screenplay writing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "librosa>=0.10.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "model2vec>=0.4.0",
    "stable-ts>=2.16.0",
    "soundfile>=0.13.1",
    "questionary>=2.1.1",
]

[project.optional-dependencies]
# Faster transcription on Apple Silicon
align-mlx = ["mlx-whisper>=0.4.0"]

[project.scripts]
alsmuse = "alsmuse.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alsmuse"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "PLC0415"]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "radon>=6.0.1",
]
